--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="data:">
+<!--    <link rel="icon" href="data:">-->
 <!--    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />-->
 <!--    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
