--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 <!--    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />-->
 <!--    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <title>VrMates</title>
     <style>
       body{
